--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Cache conda deps
         uses: actions/cache@v3
         with:
-          key: ${{ matrix.os }}-${{ matrix.BUILD_TYPE }}-${{ matrix.COMPILER }}-conda-${{ hashFiles('.github/workflows/conda/macos_env.yml') }}
+          key: ${{ matrix.os }}-${{ matrix.BUILD_TYPE }}-${{ matrix.COMPILER }}-conda-${{ hashFiles('conda/environment.yml') }}
           path: /usr/share/miniconda/envs/riscv_perf_model # Default path for conda
 
       # Setup CCache to cache builds
@@ -66,7 +66,7 @@ jobs:
         run: |
           # $CONDA is an environment variable pointing to the root of the miniconda directory
           $CONDA/bin/conda config --set channel_priority strict
-          $CONDA/bin/conda env update --file  ${{ github.workspace }}/.github/workflows/conda/macos_env.yml
+          $CONDA/bin/conda env update --file  ${{ github.workspace }}/conda/environment.yml
           $CONDA/bin/conda init bash
 
       # Build
