--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -63,11 +63,20 @@ jobs:
             ${{ matrix.os }}-${{ matrix.BUILD_TYPE }}-${{ matrix.COMPILER }}-ccache
 
       - name: Setup Conda Environment
-        run: |
-          # $CONDA is an environment variable pointing to the root of the miniconda directory
-          $CONDA/bin/conda config --set channel_priority strict
-          $CONDA/bin/conda env update --file  ${{ github.workspace }}/.github/workflows/conda/macos_env.yml
-          $CONDA/bin/conda init bash
+        uses: conda-incubator/setup-miniconda@v2
+	with:
+	  miniforge-variant: Mambaforge
+	  channels: conda-forge,defaults
+	  channel-priority: true
+	  activate-environment: riscv_perf_model
+	  environment-file: .github/workflows/conda/macos_env.yml
+
+#      - name: Setup Conda Environment
+#        run: |
+#          # $CONDA is an environment variable pointing to the root of the miniconda directory
+#          $CONDA/bin/conda config --set channel_priority strict
+#          $CONDA/bin/conda env update --file  ${{ github.workspace }}/.github/workflows/conda/macos_env.yml
+#          $CONDA/bin/conda init bash
 
       # Build
       - name: Build & Regress
