--- a/traces/docker_stf_trace_gen/Dockerfile
+++ b/traces/docker_stf_trace_gen/Dockerfile
@@ -1,16 +1,17 @@
 FROM ubuntu:24.04
 
 # Set environment variables early
-ENV RISCV=/riscv \
-    QEMU_PLUGINS=/qemu/build/contrib/plugins \
-    PATH=$RISCV/bin:/opt/riscv/riscv32-elf/bin:/opt/riscv/riscv64-elf/bin:/opt/riscv/riscv32-glibc/bin:/SimPoint/bin:/qemu/build:$PATH \ 
-    DEBIAN_FRONTEND=noninteractive \
-    WORKDIR=/workspace \
-    WORKLOADS=/workloads \
-    OUTPUT=/output
+ENV RISCV=/riscv
+ENV QEMU_DIR=/qemu
+ENV QEMU_PLUGINS=/qemu/build/contrib/plugins
+ENV PATH=$RISCV/bin:/opt/riscv/riscv32-elf/bin:/opt/riscv/riscv64-elf/bin:/opt/riscv/riscv32-glibc/bin:/SimPoint/bin:/qemu/build:$PATH 
+ENV DEBIAN_FRONTEND=noninteractive
+ENV WORKDIR=/workspace
+ENV WORKLOADS=/workloads
+ENV OUTPUT=/output
 
 # Install dependencies and clean up in one layer
-RUN apt-get update && apt-get install -y \
+RUN apt update && apt install -y \
     autoconf \
     automake \
     autotools-dev \
@@ -53,8 +54,7 @@ RUN apt-get update && apt-get install -y \
     wget \
     zlib1g-dev \
     zstd \
-    && rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
+    python3-yaml
 
 # Configure git for building
 RUN git config --global url."https://github.com/".insteadOf "git@github.com:" && \
@@ -62,13 +62,14 @@ RUN git config --global url."https://github.com/".insteadOf "git@github.com:" &&
     git config --global user.name "Docker Builder"
 
 # Create directory structure
-RUN mkdir -p /workloads /output /workspace $RISCV
+RUN mkdir -p /output
 
 # Clone repositories in RISCV directory
 WORKDIR $RISCV
-RUN git clone https://github.com/condorcomputing/condor.riscv-isa-sim.git --recurse-submodules && \
-    git clone https://github.com/sparcians/stf_tools && \
-    git clone https://github.com/riscv-software-src/riscv-pk.git
+RUN git clone https://github.com/condorcomputing/condor.riscv-isa-sim.git --recurse-submodules
+RUN git clone https://github.com/sparcians/stf_tools
+RUN git clone https://github.com/riscv-software-src/riscv-pk.git
+RUN git clone https://gitlab.com/ribeiro.v.silva/trace-gen.git
 
 # Clone QEMU and SimPoint
 WORKDIR /
@@ -87,15 +88,14 @@ RUN chmod +x $RISCV/get-tool.sh && \
     echo "Toolchain version:" && \
     riscv64-unknown-linux-gnu-gcc --version 2>/dev/null || echo "Toolchain setup pending"
 
-RUN mkdir -p /qemu/build
 # Build QEMU with plugins support
 WORKDIR /qemu/build
 RUN ../configure \
-        --target-list=riscv32-linux-user,riscv64-linux-user,riscv32-softmmu,riscv64-softmmu \
-        --enable-plugins \
-        --disable-docs \
-        --disable-gtk \
-        --disable-sdl 
+    --target-list=riscv32-linux-user,riscv64-linux-user,riscv32-softmmu,riscv64-softmmu \
+    --enable-plugins \
+    --disable-docs \
+    --disable-gtk \
+    --disable-sdl 
 RUN make -j$(nproc)
 RUN make install
 
@@ -116,6 +116,7 @@ RUN ../configure --prefix=$RISCV/condor.riscv-isa-sim/install
 RUN make -j$(nproc) 
 RUN make regress 
 RUN make install
+ENV STF_DIR=$RISCV/condor.riscv-isa-sim/stf_lib
 
 # Create mount points for runtime mounting
 # Environment and flow scripts will be mounted at runtime
@@ -127,9 +128,18 @@ RUN mkdir -p /workloads/environment /flow /outputs
 # - Host outputs -> /outputs
 
 RUN cp $RISCV/condor.riscv-isa-sim/install/bin/spike /usr/bin/
+
+WORKDIR $RISCV/trace-gen
+RUN make 
+RUN make install
+
+WORKDIR $RISCV/riscv-pk/build
+RUN mkdir $RISCV/pk
+RUN ../configure --prefix=$RISCV/pk --host=riscv64-unknown-elf
+RUN make -j$(nproc)
+RUN make install
+ENV PATH=$RISCV/pk:$PATH 
+
 WORKDIR /workspace 
 
-
 CMD ["/bin/bash"]
-
-# need to mount Volumes and show it in the documenation when runnignthis 
